--- a/TP4/TP4.cbp
+++ b/TP4/TP4.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="alumno.h" />
+		<Unit filename="listaAlumno.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="listaAlumno.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
